# kafka-logger

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
examples/: basic_config.yaml  basic_usage.py  config.yaml  json_config.yaml  json_usage.py  kafka_config.yaml  kafka_usage.py  queue_kafka_usage.py
src/kafka_logger/: __init__.py  __main__.py  config.py  default_config.yaml  example_config.yaml  filters.py  handler.py  handlers.py
tests/: test_basic.py  test_cli.py  test_config.py  test_dynamic_factory.py  test_static_factory.py
